--- a/signup.html
+++ b/signup.html
@@ -13,8 +13,47 @@
    
   </head>
     <body class="text-center">
+  <nav class="nav">
+    <img class="mb-4" src="/image/circletreemobile.png" alt="" width="90" height="70">
+    <h5>Click to Win an andriod or iphone smartphone!</h5>
+  </nav>
+  <container class="i-box">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Sign up to Circletree Moblie and get discounts on new smartphones, smartphone plans and get the latest news on andriod and ios smartphones</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+            <img class="card-img-bottom" src="/image/iphone-12-pro.jpg" height="550px" width="450px" alt="Card image cap">
+          </div>
+  </container>
+
+  <container class="i-box">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Sign up to Circletree Moblie and get discounts on new smartphones, smartphone plans and get the latest news on andriod and ios smartphones</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+      <img class="card-img-bottom" src="/image/iphone-12-pro.jpg" height="550px" width="450px" alt="Card image cap">
+    </div>
+</container>
+    
+  <container class="i-box">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Sign up to Circletree Moblie and get discounts on new smartphones, smartphone plans and get the latest news on andriod and ios smartphones</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+      <img class="card-img-bottom-box" src="/image/boxesofiphones.png" alt="Card image cap">
+    </div>
+</container>
+
+  <container>
       <form action="/" method="POST"class="form-signin">
-      <img class="mb-4" src="image/logo.png" alt="" width="200" height="200">
+        <h3>Kerment Moblie Hub</h3>
+      <!-- <img class="mb-4" src="image/logo.png" alt="" width="150" height="120"> -->
       <h1 class="h3 mb-3 font-weight-normal">Sign up here</h1>
       
       <input type="text" name="fName" class="form-control top" placeholder="First Name" required autofocus>
@@ -24,6 +63,8 @@
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up Here</button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2022</p>
     </form>
+  </container>
+  
   <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
