--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
       <ul>
         <a class="" href=""></a>
         <lil>
-          <img class="circletree_img" src="/image/circletreemobile.png" alt="" width="90" height="70">
+          <img class="circletree_img" src="/image/circletreemobile.png" alt="" width="100" height="80">
         </lil>
       </ul>
     </nav>
@@ -50,7 +50,7 @@
   <div class="card">
     <div class="card-body">
       <!-- <h5 class="card-title">Circletree Moblie have </h5> -->
-      <p class="card-text">We also have great deals on andriods and tablets</p>
+      <h5 class="card-title">We also have great deals on andriods and tablets</h5>
       <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
     </div>
     <img class="card-img-bottom" src="/image/smartphone-store-1.png" height="550px" width="450px" alt="Card image cap">
@@ -82,7 +82,22 @@
     </form>
   </container>
   <footer>
-    <p class="mt-5 mb-3 text-muted">&copy; 2017-2022</p>
+    <address>
+      <span>
+        <strong>
+          Bramalea City Centre <br/>
+          Located near the Dixie Road Entrance, <br />
+          on the upper Level<br/>
+          Unit 101A, 25 Peel Centre Dr.<br/>
+          Brampton, ON, L6T 5T5<br/><br/><br/>
+        </strong>
+        <strong>Email: </strong><a href="mailto:circletreem@gmail.com">circletreem@gmail.com</a><br/>
+        <strong>Phone:</strong> (905) 595-0005<br/>
+        <strong>Sunday:</strong> 11 AM - 7 PM<br/>
+        <strong>Monday-Friday:</strong> 10 AM - 9 PM <br/>
+        <strong>Saturday:</strong> 10 AM - 8 PM<br/>
+    <br class="mt-5 mb-3 text-muted">&copy; 2017-2022</br></span>
+    </address>
   </footer>
   <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
