change text in success.html

--- a/success.html
+++ b/success.html
@@ -11,7 +11,8 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Signing up was a success!</h1>
-          <p class="lead">Looking forward to a lot of content</p>
+          <p class="lead">Look forward to get emails for great deals</p>
+          <p class="lead">Can now close this window</p>
         </div>
       </div>
 </body>
