--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Signing up was a success!</h1>
-          <p class="lead">Can now close this window</p>
+          <p class="lead">You can now close this window</p>
         </div>
       </div>
 </body>
